--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -70,23 +70,10 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
+    - assets/Images/logo.png
     - assets/Images/pageview.png
-
-  # An image asset can refer to one or more resolution-specific "variants", see
-  # https://flutter.dev/assets-and-images/#resolution-aware
-
-  # For details regarding adding assets from package dependencies, see
-  # https://flutter.dev/assets-and-images/#from-packages
-
-  # To add custom fonts to your application, add a fonts section here,
-  # in this "flutter" section. Each entry in this list should have a
-  # "family" key with the font family name, and a "fonts" key with a
-  # list giving the asset and other descriptors for the font. For
-  # example:
-  #fonts:
-    #- family: Changa
-      #fonts:
-        #- asset: assets/Fonts/Changa.ttf
+    - assets/Images/pageview2.png
+    - assets/Images/pageview3.png
   #       - asset: fonts/Schyler-Italic.ttf
   #         style: italic
   #   - family: Trajan Pro
