--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -71,6 +71,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/Images/logo.png
+    - assets/Images/logo2.png
     - assets/Images/pageview.png
     - assets/Images/pageview2.png
     - assets/Images/pageview3.png
