--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
     sdk: flutter
 
 
+
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: 1.0.5
@@ -45,17 +46,13 @@ dependencies:
   dio: ^4.0.6
   shared_preferences: ^2.0.15
   carousel_slider: ^4.1.1
+  flutter_native_splash: ^2.2.3+1
+  flutter_launcher_icons: ^0.9.3
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
-  # The "flutter_lints" package below contains a set of recommended lints to
-  # encourage good coding practices. The lint set provided by the package is
-  # activated in the `analysis_options.yaml` file located at the root of your
-  # package. See that file for information about deactivating specific lint
-  # rules and activating additional ones.
-  flutter_lints: ^2.0.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -89,3 +86,16 @@ flutter:
     - family: Changa
       fonts:
         - asset: assets/Fonts/Changa.ttf
+
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "assets/Images/logo2.png"
+  adaptive_icon_background: "#F8F9FA"
+  adaptive_icon_foreground: "assets/Images/logo_foreground.png"
+  # The "flutter_lints" package below contains a set of recommended lints to
+  # encourage good coding practices. The lint set provided by the package is
+  # activated in the `analysis_options.yaml` file located at the root of your
+  # package. See that file for information about deactivating specific lint
+  # rules and activating additional ones.
+  flutter_lints: ^2.0.1
