--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,19 +35,19 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: 1.0.5
-  flutter_bloc: ^8.0.1
-  bloc: ^8.0.3
+  flutter_bloc: 8.1.1
+  bloc: 8.1.0
   hexcolor: ^2.0.7
   get: ^4.6.5
   get_storage: ^2.0.3
-  font_awesome_flutter: ^10.1.0
+  font_awesome_flutter: 10.2.1
   google_fonts: ^3.0.1
   smooth_page_indicator: ^1.0.0+2
   dio: ^4.0.6
   shared_preferences: ^2.0.15
   carousel_slider: ^4.1.1
-  flutter_native_splash: ^2.2.3+1
-  flutter_launcher_icons: ^0.9.3
+  flutter_native_splash: 2.2.9
+  flutter_launcher_icons: 0.10.0
 
 dev_dependencies:
   flutter_test:
